# Delvalue-AI

./: .env.example  .gitignore  Makefile  README.md  api_server.py  app.py  app_simple.py  code app.py  packages.txt  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
api/: config.py  dependencies.py  main.py
api/middleware/: audit.py  auth.py  rate_limit.py
api/routes/: auth.py  benchmarks.py  discovery.py  monitoring.py  processes.py
api/schemas/: auth.py  common.py  process.py
core/agents/: advisor.py  analyst.py  monitor.py  orchestrator.py
core/engines/: benchmark.py  discovery.py  nlp.py  scoring.py  simulation.py
core/ml/: features.py  models.py
data/: database.py  delvalue.db  test.db  test_monitoring.db
data/models/: __init__.py  base.py  organization.py  process.py
data/repositories/: process_repository.py
data/seeds/: benchmarks.py
data/synthetic/: processes.json
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  USER_GUIDE.md
infrastructure/: cache.py  security.py  telemetry.py  webhooks.py
integrations/: connectors.py
integrations/crm/: salesforce_connector.py
integrations/erp/: sap_connector.py
integrations/rpa/: uipath_connector.py
pages/: 1_Dashboard.py  2_Process_Library.py  3_Opportunities.py  4_Monitoring.py  5_Reports.py
scripts/: start.sh
src/: monitoring_agent.py
src/agents/: analysis_agent.py  discovery_agent.py  monitoring_agent.py  (+1 more)
tests/: conftest.py  test_database.py  test_decision_engine.py  test_models.py
ui/: app.py
ui/pages/: about.py  (+9 more)
(+11 files in other folders)
